--- a/CSS/ppal.css
+++ b/CSS/ppal.css
@@ -1,274 +1,317 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-body{
-    height: 100%;
-    font-family: 'Comic Neue', cursive;
+body {
+  height: 100%;
+  font-family: "Comic Neue", cursive;
+  background: linear-gradient(245.59deg, #e756e5 28.53%, #a510b2 72.52%);
 }
 
+header {
+  position: fixed;
+  right: 0;
+  z-index: 1000;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 33px 9%;
+}
 
-header{
-    position: fixed;
-    right: 0;
-    z-index: 1000;
+.logo {
+  font-size: 30px;
+  font-weight: 700;
+  color: white;
+}
+
+.navlist {
+  display: flex;
+}
+
+.navlist a {
+  color: white;
+  margin-left: 60px;
+  font-size: 17px;
+  font-weight: 200;
+  border-bottom: 2px solid transparent;
+  transition: all 0.55s ease;
+}
+
+.navlist a:hover {
+  border-bottom: 2px solid white;
+}
+
+#menu-icon {
+  color: white;
+  font-size: 35px;
+  z-index: 10001;
+  cursor: pointer;
+  display: none;
+}
+
+.hero {
+  height: 100%;
+  width: 100%;
+  min-height: 100%;
+
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 2rem;
+}
+
+section {
+  padding: 0 19%;
+}
+
+.hero-text h5 {
+  font-size: 14px;
+  font-weight: 400;
+  color: white;
+  margin-bottom: 40px;
+}
+
+.hero-text h1 {
+  font-family: "Princess Sofia", cursive;
+  font-size: 90px;
+  line-height: 1;
+  color: white;
+  margin: 0 0 45px;
+}
+
+.hero-text h4 {
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.hero-text p {
+  color: white;
+  font-size: 16px;
+  line-height: 1.9;
+  margin-bottom: 40px;
+}
+
+.hero-img img {
+  width: 700px;
+  height: auto;
+}
+
+.hero-text a {
+  display: inline-block;
+  color: white;
+  background: #7a0e78;
+  border: 1px solid transparent;
+  padding: 12px 30px;
+  line-height: 1.4;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 30px;
+  text-transform: uppercase;
+  transition: all 0.55s ease;
+}
+
+.hero-text a:hover {
+  background: transparent;
+  border: 1px solid white;
+  transform: translateX(8px);
+}
+
+.icons {
+  position: absolute;
+  top: 50%;
+  padding: 0 9%;
+  transform: translateY(-50%);
+}
+
+.icons svg {
+  display: block;
+  margin: 26px 0;
+  font-size: 24px;
+  color: white;
+  transition: all 0.55s ease;
+}
+
+.icons svg:hover {
+  color: #4d9559;
+  transform: translateY(-5px);
+}
+
+.scroll-down {
+  position: absolute;
+  bottom: 6%;
+  right: 9%;
+}
+
+.scroll-down svg {
+  display: block;
+  padding: 12px;
+  font-size: 25px;
+  color: white;
+  background: #954d8ba2;
+  border-radius: 30px;
+  transition: all 0.55s ease;
+}
+
+.scroll-down svg:hover {
+  transform: translateY(-5px);
+}
+
+.form {
+  margin: auto;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 30px;
+  padding: 3.5em 1.5em;
+  background: linear-gradient(245.59deg, #e756e5 28.53%, #a510b2 72.52%);
+}
+
+.form_container{
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 33px 9%;
-}
-
-.logo{
-    font-size: 30px;
-    font-weight: 700;
-    color: white;
-}
-
-.navlist{
-    display: flex;
-    
-}
-
-.navlist a{
-    color: white;
-    margin-left: 60px;
-    font-size: 17px;
-    font-weight: 200;
-    border-bottom: 2px solid transparent;
-    transition: all .55s ease;
-}
-
-.navlist a:hover{
-    border-bottom: 2px solid white;
-}
-
-#menu-icon{
-    color: white;
-    font-size: 35px;
-    z-index: 10001;
-    cursor: pointer;
-    display: none;
-}
-
-.hero{
-    height: 100%;
-    width: 100%;
-    min-height: 100%;
-    background: linear-gradient(245.59deg, #e756e5 28.53%, #a510b2 72.52%);
-    position: relative;
     display: grid;
-    grid-template-columns: repeat(2 , 1fr);
-    align-items: center;
-    gap: 2rem;
+    gap: 1em;
+    grid-auto-columns: 100%;
 }
 
-section{
-    padding: 0 19%;
+.form_title{
+    text-align: center;
+    font-size: 1.9rem;
+    margin-bottom: .4em;
 }
 
-.hero-text h5{
-    font-size: 14px;
+.form_input{
+   font-size: 1rem;
+   padding: .8em 1em;
+   outline: none;
+   border: none;
+   border: 1px solid #bbb0b0;
+   border-radius: 0.2em;
+}
+
+.form_input-message{
+    resize: none;
+    padding: 1.8em 1em;
+    margin-bottom: .5em;
+}
+
+.form_cta{
+    background-color: #dd30f4;
+    color: white;
+    border: none;
+    font-weight: 300;
+    padding: .7em 0;
+    border-radius: .2em;
+    cursor: pointer;
     font-weight: 400;
-    color: white;
-    margin-bottom: 40px;
 }
 
-.hero-text h1{
-    font-family: 'Princess Sofia', cursive;
-    font-size: 90px;
-    line-height: 1;
-    color: white;
-    margin: 0 0 45px;
+@media (max-width: 1535px) {
+  header {
+    padding: 15px 3%;
+    transition: 0.2s;
+  }
+  .icons {
+    padding: 0 3%;
+    transition: 0.2s;
+  }
+  .scroll-down {
+    right: 3%;
+    transition: 0.2s;
+  }
 }
 
-.hero-text h4{
-    font-size: 18px;
-    font-weight: 600;
-    color: white;
-    margin-bottom: 10px;
+@media (max-width: 1460px) {
+  section {
+    padding: 0 12%;
+    transition: 0.2s;
+  }
 }
 
-.hero-text p{
-    color: white;
-    font-size: 16px;
-    line-height: 1.9;
-    margin-bottom: 40px;
-}
-
-.hero-img img{
-    width: 700px ;
+@media (max-width: 1340px) {
+  .hero-img img {
+    width: 100%;
     height: auto;
+  }
+  .hero-text h1 {
+    font-size: 75px;
+    margin: 0 0 30px;
+  }
+  .hero-text h5 {
+    margin-bottom: 25px;
+  }
 }
 
-.hero-text a{
-    display: inline-block;
-    color: white;
-    background: #7a0e78;
-    border: 1px solid transparent;
-    padding: 12px 30px;
-    line-height: 1.4;
-    font-size: 14px;
-    font-weight: 500;
-    border-radius: 30px;
-    text-transform: uppercase;
-    transition: all .55s ease;
+@media (max-width: 1195px) {
+  section {
+    padding: 0 3%;
+    transition: 0.2s;
+  }
+  .hero-text {
+    padding-top: 115px;
+  }
+  .hero-img {
+    text-align: center;
+  }
+  .hero-img img {
+    width: 560px;
+    height: auto;
+  }
+  .hero {
+    height: 100%;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+  }
+  .icons {
+    display: none;
+  }
+  .scroll-down {
+    display: none;
+  }
 }
 
-.hero-text a:hover{
-    background: transparent;
-    border: 1px solid white;
-    transform: translateX(8px);
-}
-
-.icons{
-    position: absolute;
-    top:50%;
-    padding: 0 9%;
-    transform: translateY(-50%);
-    
-}
-
-.icons svg{
- display: block;   
- margin: 26px 0;
- font-size: 24px;
- color: white;
- transition: all .55s ease;
-}
-
-.icons svg:hover{
-    color: #4d9559;
-    transform: translateY(-5px);
-    
-}
-
-.scroll-down{
-    position: absolute;
-    bottom: 6%;
-    right: 9%;
-    
-}
-
-.scroll-down svg{
+@media (max-width: 990px) {
+  #menu-icon {
     display: block;
-    padding: 12px;
-    font-size: 25px;
-    color: white;
-    background: #954d8ba2;
-    border-radius: 30px;
-    transition: all .55s ease;
-}
-
-.scroll-down svg:hover{
-    transform: translateY(-5px) ;
-}
-
-@media (max-width: 1535px){
-    
-    header{
-        padding: 15px 3%;
-        transition: .2s;
-    }
-    .icons{
-        padding: 0 3%;
-        transition: .2s;
-    }
-    .scroll-down{
-        
-        right: 3%;
-        transition: .2s;
-        
-    }
-}
-
-@media (max-width: 1460px){
-    section{
-        padding: 0 12%;
-        transition: 0.2s;
-    }
-}
-
-@media (max-width: 1340px){
-    .hero-img img{
-        width: 100%;
-        height: auto;
-    }
-    .hero-text h1{ 
-        font-size: 75px;
-        margin: 0 0 30px;
-    }
-    .hero-text h5{
-        margin-bottom: 25px;
-    }
-    
-}
-
-@media (max-width: 1195px){
-    section{
-        padding: 0 3%;
-        transition: .2s;
-    }
-    .hero-text{
-        padding-top: 115px;
-    }
-    .hero-img{
-        text-align: center;
-    }
-    .hero-img img{
-        width: 560px;
-        height: auto;
-    }
-    .hero{
-        height: 100%;
-        gap: 1rem;
-        grid-template-columns: 1fr;
-    }
-    .icons{
-        display: none;
-    }
-    .scroll-down{
-        display: none;
-    }
-    
-}
-
-@media (max-width: 990px){
-    #menu-icon{
-        display: block;
-    }
-    .navlist{
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        width: 300px;
-        height: 40vh;
-        background: #e116e87a;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding: 50px 20px;
-        transition: all .55s ease;
-    }
-    .navlist a{
-        display: block;
-        margin-left: 0;
-        margin: 7px 0 ;
-    }
-    .navlist.open{
+  }
+  .navlist {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    width: 300px;
+    height: 40vh;
+    background: #e116e87a;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px 20px;
+    transition: all 0.55s ease;
+  }
+  .navlist a {
+    display: block;
+    margin-left: 0;
+    margin: 7px 0;
+  }
+  .navlist.open {
     right: 0;
-    }
+  }
 }
 
+@media (max-width: 680px) {
+  .hero-img img {
+    width: 100%;
+    height: auto;
+  }
+}
 
-@media (max-width: 680px){
-    .hero-img img{
-        width: 100%;
-        height: auto;
+@media (max-width:450px){
+    .form{
+        padding: 3.5em 1em;
     }
 }
